deploy/k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baton-go-http
  labels:
    app.kubernetes.io/name: baton-go
    app.kubernetes.io/component: application
spec:
  selector:
    app.kubernetes.io/name: baton-go
    app.kubernetes.io/component: application
  ports:
    - name: http
      port: 8080
      targetPort: http
      appProtocol: http
