deploy/k8s/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baton-go-mysql
  labels:
    app.kubernetes.io/name: baton-go
    app.kubernetes.io/component: database
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: baton-go
    app.kubernetes.io/component: database
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
      appProtocol: mysql
